<resources>
    <string name="app_name" translatable="false">diversidade.ID</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_login" translatable="false">Sign in</string>
    <string name="action_edit">Edit Photo</string>
    <string name="action_info">Information</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">This password is incorrect</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register" translatable="false">Register Account</string>
    <string name="email_validation">Validate your email to continue</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_gallery_feed" translatable="false">galleryFeed</string>
    <string name="title_activity_other_photos_gallery" translatable="false">otherPhotosGallery</string>

    <string name="title_activity_on_click_image" translatable="false">onClickImage</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="title_activity_show_on_map" translatable="false">Map</string>
    <string name="title_activity_guide" translatable="false">guide</string>
    <string name="title_activity_species_details" translatable="false">speciesDetails</string>
    <string name="title_activity_same_species_gallery" translatable="false">sameSpeciesGallery</string>
    <string name="title_activity_show_species_on_map" translatable="false">Map</string>
    <string name="title_activity_photo_details" translatable="false">photoDetails</string>
    <string name="title_activity_guide_activity" translatable="false">guide_activity</string>
    <string name="title_activity_photo_details_activity" translatable="false">photoDetails_activity</string>
    <string name="title_activity_same_species_activity" translatable="false">same_species_activity</string>
    <string name="title_activity_species_details_activity" translatable="false">speciesDetails_activity</string>
    <string name="title_activity_map_activity" translatable="false">Map</string>
    <string name="title_activity_settings" translatable="false">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>

    <string name="especie">Species:</string>
    <string name="vulgar">Vulgar Name:</string>
    <string name="autor">Author:</string>
    <string name="descricao">Description:</string>
    <string name="ecologia">Ecology:</string>
    <string name="related">Sightings you can also like</string>
    <string name="relatedPhotos">Other sightings:</string>
    <string name="noDescription">This species is new and has no description. Would you like to add one?</string>
    <string name="newSpecie">New Species</string>
    <string name="newSight">New Capture</string>

    <string name="userFeed">My sightings</string>
    <string name="othersFeed">Sightings Gallery</string>
    <string name="newPhotos">Pending Sightings</string>
    <string name="guide">Species Guide</string>
    <string name="map">Sightings Map</string>
    <string name="options">Options</string>
    <string name="endSession">Log off</string>
    <string name="userInfo">Account</string>

    <string name="noPhotos">No sightings! To make a new capture, click on the icon in the lower right corner.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="takenBy">Taken by: </string>
    <string name="mapCardView">Map</string>

    <string name="descDialog"> Description </string>
    <string name="ecoDialog"> Ecology </string>

    <string name="ecoLayout">Already has ecology!</string>
    <string name="descLayout">Already has description!</string>
    <string name="vulgarLayout">Already has vulgar name!</string>

    <string name="acceptUpload">Confirm</string>
    <string name="denyUpload">Reject</string>
    <string name="title_activity_edit_species_details">editSpeciesDetails</string>
    <string name="uploadDone">Upload done successfully!</string>
    <string name="uploadFailed">Upload incomplete! Turn on location access.</string>
    <string name="title_activity_choose_location">Map</string>

    <string name="chooseLocation"> Choose location</string>
    <string name="title_activity_initial_screen">Welcome!</string>

    <string name="goToMA">My sightings</string>
    <string name="goToGA">Gallery</string>
    <string name="goToLE">Species List</string>
    <string name="goToMapa">Map</string>
    <string name="title_activity_about">aboutActivity</string>

    <string name="turnOnLocation">Your location access seems to be deactivated. Without it, any picture you take in the application will not be uploaded. You want to turn it on?</string>
    <string name="turnOnOptionsYes">Yes</string>
    <string name="turnOnOptionsNo">No</string>

    <string name="userName">User Name</string>
    <string name="useUserName">Disabling this will make your uploads use your email as author.</string>

    <string name="about">About</string>

</resources>
