<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/userFeed" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/othersFeed" />
        <item
            android:id="@+id/nav_waitingPhotos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/newPhotos" />
        <item
            android:id="@+id/nav_guide"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/guide" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/map" />
    </group>

    <item android:title="@string/userInfo">
        <menu>
            <item
                android:id="@+id/nav_options"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/options" />
            <item
                android:id="@+id/nav_signOut"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/endSession" />
        </menu>
    </item>

</menu>
